// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CLIGuide renders the contents when open 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="sc-fubCzh hsvamz"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 bwcGXo sc-eHfRjS dclsrX"
      role="tablist"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 kUDZbv"
      >
        <button
          aria-expanded="true"
          aria-selected="true"
          class="StyledButtonKind-sc-1vhfpnt-0 cWcrx"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kTfBZm"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 iCKlst"
            >
              <span
                aria-hidden="true"
                class="StyledText-sc-1sadyjn-0 fGZfQq fa fa-shell"
                role="presentation"
              />
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kQucgP"
              />
              <span
                class="StyledText-sc-1sadyjn-0 bZyMis"
              >
                Get something from somewhere
              </span>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 eSHkPg"
            >
              <svg
                aria-label="FormUp"
                class="StyledIcon-sc-ofa7kd-0 gAeRsc"
                viewBox="0 0 24 24"
              >
                <path
                  d="m18 15-6-6-6 6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
        <div
          class="StyledBox-sc-13pk1d4-0 kSZjsO"
          style=""
        >
          <div
            aria-hidden="false"
            class="StyledBox-sc-13pk1d4-0 kSZjsO Collapsible__AnimatedBox-sc-15kniua-0 gzJhQE"
            open=""
            style="max-height: 0;"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 hpndGz"
            >
              Just some content
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CLIGuide renders without crashing 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="sc-fubCzh hsvamz"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 bwcGXo sc-eHfRjS dclsrX"
      role="tablist"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 kUDZbv"
      >
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButtonKind-sc-1vhfpnt-0 cWcrx"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kTfBZm"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 iCKlst"
            >
              <span
                aria-hidden="true"
                class="StyledText-sc-1sadyjn-0 fGZfQq fa fa-shell"
                role="presentation"
              />
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kQucgP"
              />
              <span
                class="StyledText-sc-1sadyjn-0 bZyMis"
              >
                Get something from somewhere
              </span>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 eSHkPg"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-sc-ofa7kd-0 gAeRsc"
                viewBox="0 0 24 24"
              >
                <path
                  d="m18 9-6 6-6-6"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
        <div
          class="StyledBox-sc-13pk1d4-0 kSZjsO"
        >
          <div
            aria-hidden="true"
            class="StyledBox-sc-13pk1d4-0 kSZjsO Collapsible__AnimatedBox-sc-15kniua-0 dvSzsF"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
